--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 <footer id="footer">
     <div class="footer-container">
         <div class="credits">
-            Content Noah Clancey (S3717687). Designed by <a href="https://github.com/Abhisaran">Abhi</a>
+            Content Noah Clancey (S3717687) 2021. Designed by <a href="https://github.com/Abhisaran">Abhi</a>
         </div>
         <div class="copyright">
             &copy; Copyright <strong><span>MIT License</span></strong> All Rights Reserved
