--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
             <div class="portfolio-grid-item" data-project-type="3D Mapping">
                 <!--                <a href="https://noahc183.carto.com/builder/8063a211-31df-4207-80a4-a401a376b64b/embed">-->
-                <a href="images/project-images/1.png">
-                    <img class="portfolio-image" src="images/project-images/1.png" alt="Project Image">
+                <a href="images/project-images/1.PNG">
+                    <img class="portfolio-image" src="images/project-images/1.PNG" alt="Project Image">
                 </a>
                 <div>
                 <p>
